# ML-End-2-End

./: .gitignore  README.md
Data Science Salary/: README.md
Health Care/: README.md
Loan Status/: README.md
Project 1/: README.md  pyproject.toml  requirements.txt
Project 1/notebook/: 01_clean data.ipynb  02_analytics.ipynb  03_feature_engineering.ipynb  04_feature_selection.ipynb  05_preprocessing.ipynb  06_model_job_baseline.ipynb  07_model_job_rf.ipynb
Project 2/notebook/: 00_exploration.ipynb  01_clean data.ipynb  02_analytics.ipynb  03_feature_engineering.ipynb  04_feature_selection.ipynb  05_preprocessing.ipynb  06_model_base.ipynb  07_test_models.ipynb  08_model_jod_rf.ipynb
User Behavior/: README.md
